BOUN-86 Added clarity icons for the visibility formatting yet to fix

--- a/frontend/src/app/pages/assessments/assessments.component.css
+++ b/frontend/src/app/pages/assessments/assessments.component.css
@@ -169,3 +169,18 @@ clr-control-error {
 .row {
   display: list-item;
 }
+
+.fileStore {
+  display: flex !important;
+  flex-direction: column !important;
+}
+
+.checkmark {
+  color: green;
+  flex-direction: row;
+}
+
+.wrong {
+  color: red;
+  flex-direction: row;
+}
